[package]
name = "orm_mysql"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"


[dependencies]
macro_lib = {path = "./macro_lib"}
log = "*"
serde_json = { version = "1.0", features = ["preserve_order"] }
common_uu = {git = "https://gitee.com/guoyucode/common_uu.git", default-features = false}
serde = { version = "1.0", features = ["derive"] }
mysql_async = "0.31"
async-trait = "0.1.60"


[dev-dependencies]
log = "*"
serde_json = { version = "1.0", features = ["preserve_order"] }
common_uu = {git = "https://gitee.com/guoyucode/common_uu.git", default-features = false}
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.13", features = ["rt", "rt-multi-thread", "macros", ] }


[features]
default = []
