[package]
name = "orm_mysql"
version = "1.1.1"
edition = "2021"
authors = ["guoyu <guoyumail@qq.com>"]
description = "orm_mysql" 
license = "MIT OR Apache-2.0"
repository = "https://github.com/guoyucode/orm_mysql"



[lib]
path = "src/lib.rs"


[dependencies]
chrono = { version = "0.4", features = ["serde"], optional = true}
orm_mysql_macro = {version = "1"}
log = "0.4"
serde_json = { version = "1.0", features = ["preserve_order"] }
common_uu = { version = "1", default-features = false}
serde = { version = "1.0", features = ["derive"] }
mysql_async_uu = "0.32.4"
async-trait = "0.1.60"


[dev-dependencies]
log = "0.4"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.13", features = ["rt", "rt-multi-thread", "macros", ] }
time = "0.3"


[features]
default = ["chrono"]
