[package]
name = "macro_lib"
version = "0.2.0"
edition = "2021"

[lib]
proc-macro = true
path = "./lib.rs"

[dependencies]
log = "*"
syn = "1"
quote = "1"
proc-macro2 = "1"
serde_json = { version = "1.0", features = ["preserve_order"] }
common_uu = {git = "https://gitee.com/guoyucode/common_uu.git", default-features = false}